Fix shift right click

--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ html, body {
 #reactor-layers {
 	display: grid;
 	padding: 20px;
-	gap: 10px;
+	gap: 15px;
 	grid-row: 2;
 	grid-column: 2;
 	grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
